data/derived/comb/progs/unify/prog2533.ml.out
Characters 13-25:
  exprToString (VarX, VarY);;
               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
